--- a/EventEaseApp/appsettings.json
+++ b/EventEaseApp/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:eventeasemypoeserver.database.windows.net,1433;Initial Catalog=EventEaseDB;Persist Security Info=False;User ID=Bradley;Password=johnlennon123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": ""
     }
 }
